# pvecli

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
docs/: commands.md  configuration.md
src/: __init__.py  __main__.py  crypto.py  rdp.py  ssh.py
src/api/: __init__.py  auth.py  client.py  exceptions.py
src/cli/: __init__.py  _shared.py  cluster.py  config.py  ct.py  main.py  node.py  pool.py  storage.py  tag.py  vm.py
src/config/: __init__.py  manager.py
src/models/: __init__.py  config.py  container.py  storage.py  vm.py
src/utils/: __init__.py  helpers.py  menu.py  network.py  output.py  tags.py
src/vnc/: __init__.py  __main__.py  server.py
